Fix scroll for categories on mobile, remove all products functionality

--- a/styles/mv-responsive.css
+++ b/styles/mv-responsive.css
@@ -527,6 +527,10 @@
       .cart_list .listing_actions{
         width: 20px;
       }
+      .categories:not(.subCat){
+        max-height: calc(100vh - 125px);
+        padding-bottom: 20px;
+      }
   }
 
       
